--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2><a draggable="false" href="./public/birthday-invite.html">Birthday Invite Project</a></h2><p>25/08/23</P>
         <img src="./assets/images/BirthdayInvite.png" width="400" height="500"><br />
         <a draggable="false" href = "./public/about.html">About</a>
-        <a draggable="false" href = "./public/contact.html">Contact me</a>a
+        <a draggable="false" href = "./public/contact.html">Contact me</a>
         
     </body>
 </html>
